# Grove

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  context.json  docker-compose.gpu.yml  docker-compose.yml  index.html  package-lock.json  package.json  soul.md  tailwind.config.ts  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
app/components/: GroveShell.tsx  (+2 more)
docs/: ARCHITECTURE.md  ASSESSMENT.md  DESIGN.md  ROADMAP.md
lib/: context.ts  soul.ts
plugins/: git-activity.toml  weather.toml
roles/: builder.yaml  coach.yaml  planner.yaml  reflector.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: screen-ocr.sh  screen-ocr.swift
src-tauri/src/: lib.rs  main.rs  security.rs
src-tauri/src/autonomy/: mod.rs  scoring.rs
src-tauri/src/commands/: actions.rs  autonomous.rs  context.rs  enrichment.rs  identity.rs  logs.rs  mcp.rs  memory.rs  mod.rs  profiles.rs  reason.rs  reflection.rs  roles.rs  setup.rs  soul.rs  system.rs  vector.rs  ventures.rs  watch.rs  workspace.rs
src-tauri/src/heartbeat/: mod.rs  observer.rs  patterns.rs  scheduler.rs  screen.rs
src-tauri/src/memory/: ephemeral.rs  longterm.rs  mod.rs  vector.rs  working.rs
src-tauri/src/models/: claude.rs  config.rs  context.rs  gemma.rs  mod.rs  router.rs  streaming.rs
src-tauri/src/plugins/: loader.rs  manifest.rs  mod.rs  registry.rs
src-tauri/src/soul/: autopatch.rs  enrichment.rs  evolution.rs  evolve.rs  mod.rs  parser.rs  patcher.rs
tests/: mcp_test.rs
(+62 files in other folders)
