[package]
name = "grove-os"
version = "0.2.0"
edition = "2021"
default-run = "grove-os"

[lib]
name = "grove_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "grove-os"
path = "src/main.rs"

[[bin]]
name = "grove-mcp"
path = "src/bin/grove-mcp.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "blocking"], default-features = false }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
dotenvy = "0.15"
hostname = "0.4"
toml = "0.8"
tauri-plugin-notification = "2"
futures-util = "0.3"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
